--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Armaan Singh Thakur</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,12 +11,12 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="cloud1" src="images/cloud.png" alt="cloud-image">
+      <img class="cloud1" src="cloud.png" alt="cloud-image">
 
       <h1> I'm Armaan.</h1>
       <h2> A <span class="Pro">Pro</span>grammer.</h2>
-      <img class="cloud2" src="images/cloud.png" alt="cloud-image">
-      <img class= "mountain" src="images/mountain.png" alt="cloud-image">
+      <img class="cloud2" src="cloud.png" alt="cloud-image">
+      <img class= "mountain" src="mountain.png" alt="cloud-image">
 
     </div>
 
