--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
 
     <div class="bottom-container">
-      <img class="instagram" src="instagram.png" href="https://www.linkedin.com/">
-      <img class="facebook" src="Facebook.png" href="https://www.facebook.com/armaansingh.thakur.18">
+      <a href="https://www.instagram.com/armaan.singh.thakur/"><img class="instagram" src="instagram.png" alt="intagram-logo"></a>
+      <a href="https://www.facebook.com/armaansingh.thakur.18"> <img class="facebook" src="Facebook.png" alt=""> </a>
       <p>© 2023 Armaan Singh Thakur.</p>
     </div>
 
