--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="bottom-container">
       <a href="https://www.instagram.com/armaan.singh.thakur/"><img class="instagram" src="instagram.png" alt="intagram-logo"></a>
-      <a href="https://www.facebook.com/armaansingh.thakur.18"> <img class="facebook" src="Facebook.png" alt=""> </a>
+      <a href="https://www.facebook.com/armaansingh.thakur.18"><img class="facebook" src="Facebook.png" alt="facebook-logo"></a>
       <p>© 2023 Armaan Singh Thakur.</p>
     </div>
 
